--- a/Summer/src/main/webapp/resources/admin/css/style.css
+++ b/Summer/src/main/webapp/resources/admin/css/style.css
@@ -8,6 +8,27 @@ Bootstrap Admin Template by EGrappler.com
 [1. Global]
 */
 
+.block-27 ul, .block-27 ul li {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
+
+.block-27 ul li {
+  display: inline-block;
+  margin-bottom: 4px; }
+  .block-27 ul li a, .block-27 ul li span {
+    text-align: center;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50%;
+    border: 1px solid #ccc; }
+  .block-27 ul li.active a, .block-27 ul li.active span {
+    background: #616161;
+    color: #fff;
+    border: 1px solid transparent; }
+
 body {
 	background: #f9f6f1;
 	font: 13px/1.7em 'Open Sans';
